2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-keyboard-properties.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).

2004-12-31  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkblt.c
	gnome-keyboard-properties-xkbpv.c: preview reimplemented! Hurray!

2004-12-23  Sergey V. Udaltsov <svu@gnome.org>

	* use_cases.txt: just some memo (mostly for myself) regarding the 
	use cases for the tests.

2004-12-20  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c,
	gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkblt.c,
	gnome-keyboard-properties-xkbmc.c,
	gnome-keyboard-properties-xkbot.c,
	gnome-keyboard-properties.c,
	gnome-keyboard-properties.glade: massive layout change. Layout chooser 
	popup introduced

2004-12-13  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c,
	gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkblt.c,
	gnome-keyboard-properties-xkbmc.c,
	gnome-keyboard-properties-xkbot.c: reflect massive changes in 
	libgswitchit

2004-12-09  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c: using of the XklGetMaxNumGroups

2004-11-29  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c: preview only makes sense for XKB backend

2004-11-25  Sergey V. Udaltsov <svu@gnome.org>

	* libxklavier 1.12 compatibility

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install .desktop file in $(datadir)/applications.
	
	* keyboard.desktop.in: add OnlyShowIn=GNOME;

2004-10-21  Sebastien Bacher  <seb128@debian.org>

	* gnome-keyboard-properties.glade:
	patch by Ross Burton <ross@burtonini.com> to fix the widget expansion
	(Closes: #151588).

2004-10-15  Sergey V. Udaltsov <svu@gnome.org>

	* The preview is now dialog instead of window. More consistent