@@ -29,6 +29,15 @@
 
 G_BEGIN_DECLS
 
+#define SEL_LAYOUT_TREE_COL_DESCRIPTION 0
+#define SEL_LAYOUT_TREE_COL_DEFAULT 1
+#define SEL_LAYOUT_TREE_COL_ID 2
+
+#define AVAIL_LAYOUT_TREE_COL_DESCRIPTION 0
+#define AVAIL_LAYOUT_TREE_COL_ID 1
+
+#define CWID(s) glade_xml_get_widget (chooserDialog, s)
+
 extern GConfClient *xkbGConfClient;
 
 extern void setup_xkb_tabs (GladeXML * dialog, 
@@ -92,7 +101,9 @@ extern void xkb_layouts_enable_disable_default (GladeXML * dialog,
                                GSWITCHIT_KBD_CONFIG_KEY_OPTIONS, \
                                GCONF_VALUE_STRING, (list), NULL)
 
-extern GtkWidget * create_preview_widget (GladeXML * dialog);
+extern GtkWidget * xkb_layout_preview_create_widget (GladeXML * chooserDialog);
+
+extern void xkb_layout_preview_update (GladeXML * chooserDialog);
 
 G_END_DECLS
 #endif				/* __GNOME_KEYBOARD_PROPERTY_XKB_H */
