@@ -1,3 +1,11 @@
+2005-01-02  Sergey V. Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkb.c
+	gnome-keyboard-properties-xkb.h
+	gnome-keyboard-properties-xkblt.c
+	gnome-keyboard-properties-xkbmc.c
+	gnome-keyboard-properties-xkbpv.c: a bit of the code cleanup
+
 2005-01-02  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-keyboard-properties.glade:
